Playing with md syntax

--- a/_posts/2015-6-5-recurse2.md
+++ b/_posts/2015-6-5-recurse2.md
@@ -5,9 +5,9 @@ title: Week 2 - Servers, Streams and Promises
 
 When I got to RC, I knew I wanted to wrap my head around how the web works: I had struggled to wrap my head around clients, servers, and HTTP requests. Tom suggested that I build a simple HTTP server and play around with it. I had followed nodejs tutorials before, so this time I decided I would build everything by reading only the docs. I also wanted to get a better handle on I/O - as the internals of the file system were a mystery to me, so I decided that my little app would search for and serve text from files on my computer.
 
-###My first version of this server used standard JavaScript callbacks:
+My first version of this server used standard JavaScript callbacks:
 
-``` javascript
+``` js
 
 var http = require('http'),
 	fs = require('fs'),
