--- a/_posts/2015-6-5-recurse2.md
+++ b/_posts/2015-6-5-recurse2.md
@@ -7,7 +7,7 @@ When I got to RC, I knew I wanted to wrap my head around how the web works: I ha
 
 My first version of this server used standard JavaScript callbacks:
 
-``` js
+{% highlight js %}
 
 var http = require('http'),
 	fs = require('fs'),
@@ -60,17 +60,17 @@ var server = http.createServer(function(req, res) {
 			res.end();
 		}
 });
-```
+{% endhighlight %}
 
 ####Things I learned from writing this version: 
 
-*Scope is important. Drawing diagrams helps me figure out control flow and variable access. 
-*Callbacks are super ugly, and abstracting out functionality to avoid unnecessary repetition can create scope problems.
-*Creating custom errors is easy and important.
++Scope is important. Drawing diagrams helps me figure out control flow and variable access. 
++Callbacks are super ugly, and abstracting out functionality to avoid unnecessary repetition can create scope problems.
++Creating custom errors is easy and important.
 
 I had heard that event emitters and file streams were neat, so I decided to write another version of the same server using different patterns. The server looked like this:
 
-``` js
+{% highlight js %}
 var http = require('http'),
 	fs = require('fs'),
 	FileFinder = require('./filefinder.js');
@@ -93,11 +93,11 @@ var server = http.createServer(function(req, res) {
 });
 
 server.listen(8080);
-```
+{% endhighlight %}
 
 So much cleaner! I put the file-finding code inside a separate module:
 
-``` js
+{% highlight js %}
 
 var util = require('util'),
 	EventEmitter = require('events').EventEmitter,
@@ -154,17 +154,17 @@ var FileFinder = function() {
 util.inherits(FileFinder, EventEmitter);
 module.exports = FileFinder;
 
-```
+{% endhighlight %}
 
 Things I learned from writing this version:
 
-*function.prototype.bind is AMAZING. It allowed me to generalize functionality, without losing fine-tuned control over variable access.
-*Object Oriented prototyping in JavaScript is quite unglamorous
-*Control flow using event emitters is quite clean, as long as nothing requires multiple events. Branching, however, can get ugly.
++function.prototype.bind is AMAZING. It allowed me to generalize functionality, without losing fine-tuned control over variable access.
++Object Oriented prototyping in JavaScript is quite unglamorous
++Control flow using event emitters is quite clean, as long as nothing requires multiple events. Branching, however, can get ugly.
 
 I had also heard about this thing called Promises that many JS engineers are excited about, and that will become native in ES6. So I decided to try my hand at them to see what the fuss is about:
 
-``` js
+{% highlight js %}
 
 var http = require('http'),
 	fs = require('fs'),
@@ -210,13 +210,13 @@ function write_error(res, err) {
 
 server.listen(8080);
 
-```
+{% endhighlight %}
 
 What I learned:
 
-*The server code is way more clean, especially after I named and separated out each function. That said, as with event emitters, this depends on control flow that is pretty linear. JavaScript is _still_ single-threaded, after all.
-*bind is still magical
-*I am glad that someone else has written some generic wrapper code that converts callbacks into promises. It apparently works only when functions adhere to the standard callback function(err, data) pattern, which is limiting. Exploring the source would probably be a good idea.
++The server code is way more clean, especially after I named and separated out each function. That said, as with event emitters, this depends on control flow that is pretty linear. JavaScript is _still_ single-threaded, after all.
++bind is still magical
++I am glad that someone else has written some generic wrapper code that converts callbacks into promises. It apparently works only when functions adhere to the standard callback function(err, data) pattern, which is limiting. Exploring the source would probably be a good idea.
 
 Overall, this was a useful project that wasn't too difficult. This week, I also enjoyed pairing with Tom and Steve on their JS projects: I helped Tom write a lazy HTML canvas, that collects operations to be executed later. Some unexpected behavior led us to discover that elements of the canvas API (e.g: FillStyle) that don't act as regular functions actually wrap a getter and setter function. 
 
