Fixed xkcd link

--- a/_posts/2015-6-22-recurse4.md
+++ b/_posts/2015-6-22-recurse4.md
@@ -11,7 +11,7 @@ After watching several RCers do keyboard magic with vim, I wanted to join the cl
 
 ###Tool #2: The command line
 
-I've spent 20 years as a computer user beholden to the power of the GUI. I've gotten glimpses into the awesome power of command line systems. PINE was my primary email client in college because it was so fast. The Athena cluster terminals were always Linux based, and I used the command line to write and run programs for various CS and Numerical computing courses. But in the hours a day I spent on the computer, I used the mouse for everything. RC has been a great time to gradually shift more and more of my workflow to the command line. First, I'm surrounded by people who can help me tweak UNIX commands without thinking, and who can help me retrace my steps if I follow a command that I found on Stack Overflow and it doesn't work as expected. Second, the cost-benefit calculation of taking time to write a tool (see https://xkcd.com/1205/) no longer figures, since there is no pressure to ship anything. 
+I've spent 20 years as a computer user beholden to the power of the GUI. I've gotten glimpses into the awesome power of command line systems. PINE was my primary email client in college because it was so fast. The Athena cluster terminals were always Linux based, and I used the command line to write and run programs for various CS and Numerical computing courses. But in the hours a day I spent on the computer, I used the mouse for everything. RC has been a great time to gradually shift more and more of my workflow to the command line. First, I'm surrounded by people who can help me tweak UNIX commands without thinking, and who can help me retrace my steps if I follow a command that I found on Stack Overflow and it doesn't work as expected. Second, the [cost-benefit calculation of taking time to write a tool] (https://xkcd.com/1205/) no longer figures, since there is no pressure to ship anything. 
 
 ###Tool #3: Git
 
