--- a/_posts/2015-7-1.md
+++ b/_posts/2015-7-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Fix ALL the bugs?!
+title: What IS a pipe, anyway? 
 ---
 
 Yesterday, Kamal and I got to the bottom of a fascinating bug (he wrote it up excellently [here](http://kamalmarhubi.com/blog/2015/06/30/my-favourite-bug-so-far-at-the-recurse-center/)). I read OS code for the first time, and it was super exciting. I felt like an OS ninja. 
